@@ -81,6 +81,10 @@ U stop reply
   they did not respond.  The remote stub reports support for this stop reply to
   GDB's qSupported query.
 
+qFixedThreadList
+
+  Query packet to check if the target's thread list is fixed.
+
 *** Changes in GDB 14
 
 * GDB now supports the AArch64 Scalable Matrix Extension 2 (SME2), which
